salesforce_sfdx/main/default/objects/Punto_de_suministro__c/Punto_de_suministro__c.object-meta.xml
<CustomObject>
    <label>Punto de Suministro</label>
    <nameField>
        <label>Nombre de Punto de suministro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puntos de Suministro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>