salesforce_sfdx/main/default/objects/Punto_de_suministro__c/fields/OSFPE_fld_BRG__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_BRG__c</fullName>
    <label>BRG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>