salesforce_sfdx/main/default/objects/Punto_de_suministro__c/fields/OSFPE_fld_empresa__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_empresa__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Seleccione la cuenta asociada al Punto de Suministro</inlineHelpText>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Puntos de Suministro</relationshipLabel>
    <relationshipName>Puntos_de_Suministro</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>