salesforce_sfdx/main/default/objects/Punto_de_suministro__c/fields/OSFPE_fld_plantaUbicacion__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_plantaUbicacion__c</fullName>
    <inlineHelpText>Nombre de la planta del cliente o la ubicación o sede del cliente donde se suministra la energía</inlineHelpText>
    <label>Planta/Ubicación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>