salesforce_sfdx/main/default/objects/Punto_de_suministro__c/fields/OSFPE_fld_propuesta__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_propuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propuesta</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Puntos de Suministro</relationshipLabel>
    <relationshipName>Puntos_de_Suministro</relationshipName>
    <type>Lookup</type>
</CustomField>