salesforce_sfdx/main/default/objects/Punto_de_suministro__c/fields/OSFPE_fld_puntoSuministroMedicion__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_puntoSuministroMedicion__c</fullName>
    <label>Punto de Suministro y Medición</label>
    <length>100</length>
    <type>Text</type>
</CustomField>