salesforce_sfdx/main/default/objects/Punto_de_suministro__c/recordTypes/OSFPE_rt_PuntoSuministro.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_PuntoSuministro</fullName>
    <active>true</active>
    <label>Perú</label>
</RecordType>