salesforce_sfdx/main/default/objects/Punto_de_suministro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFPE_fld_empresa__c</columns>
    <columns>OSFPE_fld_BRG__c</columns>
    <columns>OSFPE_fld_tensionSuministro__c</columns>
    <columns>OSFPE_fld_plantaUbicacion__c</columns>
    <columns>OSFPE_fld_puntoSuministroMedicion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>